# tugas-uts-artificial-intelligence

./: README.md  download_dataset.py  kaggle.json  main.qmd  pyproject.toml  train_rf_ga.py  train_rf_normal.py  train_xgb_ga.py  train_xgb_normal.py  xgboost.py
slides/: custom.css  main.html  main.qmd  references.bib
